--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Gustavohps10\\TestePrecode\\": "src/"
+            "App\\": "src/"
         }
     },
     "authors": [
