--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,9 @@
 {
     "name": "gustavohps10/teste-precode",
     "license": "MIT",
+    "scripts": {
+        "serve": "php -S localhost:8080 -t public/"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
@@ -12,5 +15,7 @@
             "email": "gustavoh.santos735@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    }
 }
