--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ APP_NAME="Precode Teste"
 APP_ENV=local
 APP_URL=http://localhost
 
-#API
+#PRECODE API
+PRECODE_API_URI=https://www.replicade.com.br
 PRECODE_API_TOKEN=
