--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,18 @@
     "name": "gustavohps10/teste-precode",
     "license": "MIT",
     "scripts": {
-        "serve": "php -S localhost:8080 -t public/"
+        "serve": [
+            "Composer\\Config::disableProcessTimeout",
+            "@php -S localhost:8000"
+        ]
     },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
-        }
+        },
+        "files": [
+            "src/Config.php"
+        ]
     },
     "authors": [
         {
@@ -16,6 +22,8 @@
         }
     ],
     "require": {
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "coffeecode/router": "^2.0",
+        "league/plates": "^3.5"
     }
 }
