--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "coffeecode/router": "^2.0",
-        "league/plates": "^3.5"
+        "league/plates": "^3.5",
+        "justinrainbow/json-schema": "^6.0"
     }
 }
